Bug 149126 - Triangular shape created in ODP loses glue points saved in pptx.
Summary: Triangular shape created in ODP loses glue points saved in pptx.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-17 11:04 UTC by NISZ LibreOffice Team
Modified: 2025-02-15 18:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file save as odf format (11.26 KB, application/vnd.oasis.opendocument.presentation)
2022-05-17 11:05 UTC, NISZ LibreOffice Team
Details
Test file save as pptx format (23.07 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-05-17 11:05 UTC, NISZ LibreOffice Team
Details
Screenshot the problem (118.99 KB, image/jpeg)
2022-05-17 11:07 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-05-17 11:04:07 UTC
Description:
In impress we create Isosceles Triangle shape and connect these shape with a connector, after that we save to pptx format.
When we open again this file, triangle shape loses glue points.


Steps to Reproduce:
1. Create a new Impress presentation.
2. Create Isosceles Triangle shape
4. Save to pptx format.
5. Open it in impress.
6. Click connectors.

Actual Results:
Triangle shape loses glue points.

Expected Results:
Triangle shape doesn't loses glue points.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 2d93fd2631b4f8ceca1068c1779963424ff90e80
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2022-05-17 11:05:12 UTC
Created attachment 180154 [details]
Test file save as odf format
Comment 2 NISZ LibreOffice Team 2022-05-17 11:05:33 UTC
Created attachment 180155 [details]
Test file save as pptx format
Comment 3 NISZ LibreOffice Team 2022-05-17 11:07:36 UTC
Created attachment 180156 [details]
Screenshot the problem
Comment 4 Regina Henschel 2022-05-17 21:32:49 UTC
Attila Bakos has already implemented the conversion from our "isosceles triangle" to OOXML preset "triangle" together with a lot of other shape conversions, see class DMLPresetShapeExporter. But he has restricted the use to DOCX (in shapes.cxx) because he had not tested export from Calc and Impress.
I think, it would be best to test the existing cases for shapes in Calc and Impress and then remove the restriction GetDocumentType() == DOCUMENT_DOCX. If you really find exceptions where it only works for DOCX (and I think that there are none), then the restriction could be done directly for that case.

The existing conversion solves the gluepoint problems here. Simple test it by removing the restriction to DOCX.

(Next step then would to consolidate the DMLPresetShapeExporter with the export in shapes.cxx of those shapes, which are on the denylist.)
Comment 5 Commit Notification 2022-06-23 14:04:14 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db39e5359d7f9b4e42c6101dd75bc5e8d809ad41

tdf#149126 fix export of PPTX preset shapes

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-06-24 14:20:02 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/a6d87845afc4080bb976f8e248d6c6cfc9a045b1

tdf#149126 fix export of PPTX preset shapes

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2022-06-27 08:07:06 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 415dc3bb1c03dbdbc3cbca274bc435ac7557ba2d
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL