tdf#149126 fix export of PPTX preset shapes

Follow-up to commit 63cd67e5e18f01aca303131e148c80398a181a41
"tdf#92525 tdf#142398: fix export of simple custom shapes" and
commit 744e6c0b758fefe6011f09860b44f03ab70fbcfe
"tdf#147459 PPTX: add "glue points" to some basic shapes".

Thanks to Regina Henschel for the code pointer.

Change-Id: I378ffffc2ba09fcffcaa4e5dcf74bfd19e9f704d