oox/source/export/shapes.cxx
@@ -926,8 +926,7 @@ ShapeExport& ShapeExport::WriteCustomShape( const Reference< XShape >& xShape )
     bool bPresetWriteSuccessful = false;
     // Let the custom shapes what has name and preset information in OOXML, to be written
     // as preset ones with parameters. Try that with this converter class.
-    if (!sShapeType.startsWith("ooxml") && sShapeType != "non-primitive"
-        && GetDocumentType() == DOCUMENT_DOCX && !mbUserShapes
+    if (!sShapeType.startsWith("ooxml") && sShapeType != "non-primitive" && !mbUserShapes
         && xShape->getShapeType() == "com.sun.star.drawing.CustomShape"
         && !lcl_IsOnAllowlist(sShapeType))
     {
